gke-gateway-controller/gRPC-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: evmos-route
  namespace: evmos
spec:
  parentRefs:
  - name: external-grpc
    namespace: evmos
  hostnames:
  - "xyz.evmos.com"
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: evmosd-service
      port: 80
