gke-gateway-controller/tls-redirect-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
  - name: external-grpc 
  hostnames:
  - xyz.evmos.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
